objects/SFDC_MDF_Claim__c.object
<CustomObject>
    <description>A set of claims tied to a specific request. Each claim is approved individually and tracks partner proof of performance. Claims can be analyzed by the claim age in days.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_History__c</fullName>
        <description>This URL runs a report which queries the channel budget entry table for source transactions matching the {id} of the current record</description>
        <formula>HYPERLINK(&quot;/00O46000001ZehE?pv0=&quot; &amp; Id , &quot;View Approval History&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <description>The total amount of the claim approved.</description>
        <label>Approved Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Age_In_Days__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Age In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Name__c</fullName>
        <description>Optional field which is more descriptive than the automatically assigned claim number</description>
        <label>Claim Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>Indicates the date the claim was approved. Used to drive claim trend reports.</description>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Cost__c</fullName>
        <label>Expenditure Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Note: This is not a master detail relationship as if the parent fund request is deleted the claim will also be deleted which may not be the desired effect for audit trial purposes.</description>
        <label>Fund Request</label>
        <referenceTo>SFDC_MDF__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>R00N46000003QcpYEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Expenditure_Detail__c</fullName>
        <label>Expenditure Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Booth</fullName>
                </value>
                <value>
                    <fullName>Conference Fees</fullName>
                </value>
                <value>
                    <fullName>List Rental</fullName>
                </value>
                <value>
                    <fullName>Printing Charges</fullName>
                </value>
                <value>
                    <fullName>Promotional Goods</fullName>
                </value>
                <value>
                    <fullName>Telemarketing Services</fullName>
                </value>
                <value>
                    <fullName>Training Costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payee_Information__c</fullName>
        <description>Alternate payee</description>
        <label>Payee Information</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percent_Approved__c</fullName>
        <formula>Approved_Amount__c /  Requested_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Approved</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Verified_Date__c</fullName>
        <description>POP Verified Date</description>
        <label>Performance Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>POP verified</description>
        <label>Performance Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S1__c</fullName>
        <formula>&quot;/servlet/servlet.Integration?lid=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>s_Servlet Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2__c</fullName>
        <formula>&quot;/servlet/servlet.FileDownload?file=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>s_Document Directory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Channel_Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Budget</label>
        <referenceTo>SFDC_Channel_Budget__c</referenceTo>
        <relationshipLabel>Fund Claims</relationshipLabel>
        <relationshipName>R00N46000003QcpREAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Settlement_Method__c</fullName>
        <label>Settlement Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Action__c</fullName>
        <formula>case(Status__c , &quot;&quot;, HYPERLINK(S1__c&amp;&quot;01N46000000UCu6&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01546000000tfi3&quot;, &quot;Submit&quot;) ), &quot;Submitted&quot;, HYPERLINK(S1__c&amp;&quot;01N46000000UCu7&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01546000000tfi4&quot;, &quot;Approve&quot;) ) &amp; HYPERLINK(S1__c&amp;&quot;01N46000000UCu8&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01546000000tfi5&quot;, &quot;Reject&quot;) ), &quot;Approved&quot;, HYPERLINK(S1__c&amp;&quot;01N46000000UCu8&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01546000000tfi5&quot;, &quot;Reject&quot;) ), &quot;Cancelled&quot;, HYPERLINK(S1__c&amp;&quot;01N46000000UCu6&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01546000000tfi3&quot;, &quot;Submit&quot;) ), &quot;Rejected&quot;, HYPERLINK(S1__c&amp;&quot;01N46000000UCu6&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01546000000tfi3&quot;, &quot;Submit&quot;) ), &quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fund Claim</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MDF__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Requested_Amount__c</columns>
        <columns>Approved_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ApprovedClaims</fullName>
        <columns>NAME</columns>
        <columns>MDF__c</columns>
        <columns>Requested_Amount__c</columns>
        <columns>Approved_Amount__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Percent_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Claims</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PendingApprovalAll</fullName>
        <columns>NAME</columns>
        <columns>MDF__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Requested_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Pending Approval - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PendingApprovalLast30Days</fullName>
        <columns>NAME</columns>
        <columns>MDF__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Requested_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Pending Approval - Last 30 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PendingApprovalLast7Days</fullName>
        <columns>NAME</columns>
        <columns>MDF__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Requested_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Pending Approval - Last 7 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>MDF__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Requested_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FC-{00000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>